# Orion-Agent

./: .env.example  .gitignore  Cargo.toml  ISSUES_AND_NOTES.md  LICENSE  NODE_SYSTEM_DESIGN.md  Orion Agent Framework 工具子系统 (Tools) 深度审计报告  README.md  README_EN.md  TASKS.md  config.yaml  orion-tui-demo.html  orion-tui-demo.jsx  providers.yaml
examples/: a2a_chat.rs  basic_agent.rs  coding_agent.rs  deepseek_agent.rs  session_demo.rs  stream_demo.rs  workspace.yaml.example
notes/: 2026-06-11-brainstorm.md
src/: config.rs  lib.rs  main.rs
src/agent/: lanes.rs  mod.rs  protocol.rs  registry.rs  runtime.rs  store.rs
src/api/: mod.rs
src/audit/: mod.rs
src/cli/: commands.rs  execute.rs  mod.rs  repl.rs  tui.rs
src/cli/chat/: commands.rs  loop_.rs  mod.rs
src/core/: agent.rs  audit.rs  cache.rs  context.rs  exec_mode.rs  execpolicy.rs  goal.rs  guardrail.rs  hooks.rs  loop.rs  mod.rs  orionignore.rs  permission_broker.rs  prompt.rs  provider.rs  tool_executor.rs  workspace.rs
src/gateway/: commands.rs  config.rs  mod.rs
src/index/: engine.rs  mod.rs  skeleton.rs
src/logging/: mod.rs  redact.rs  subsystem.rs
src/model/: mod.rs  router.rs
src/orchestrator/: coordinator.rs  map_reduce.rs  mod.rs  plan.rs  worker.rs
src/session/: backend.rs  files.rs  manager.rs  memory.rs  mod.rs  rollout.rs  sandbox.rs  store.rs  unified.rs
src/tools/: a2a_message.rs  agent_tool.rs  ask_user.rs  category.rs  docker_executor.rs  edit.rs  glob_tool.rs  grep_tool.rs  mcp.rs  mcp_init.rs  meta_tools.rs  mod.rs  multi_shell.rs  registry.rs  skeleton_tool.rs  spec.rs  web_search.rs
src/ui/: mod.rs  progress.rs  report.rs
tests/: deepseek_integration.rs  integration_tests.rs
(+10 files in other folders)
