[package]
name = "orion-agent"
version = "0.1.0"
edition = "2021"
description = "Orion Agent — modular Rust Agent framework"
license = "AGPL-3.0-only"

[[bin]]
name = "orion-agent"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json", "stream"], optional = true }
moka = { version = "0.12", features = ["future", "sync"] }
tracing = "0.1"
thiserror = "2"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
regex = "1"
ignore = "0.4"
dotenvy = { version = "0.15", optional = true }
futures = { version = "0.3", optional = true }

# Wasm 沙箱
wasmtime = { version = "26", optional = true }

# 嵌入式 KV 存储
sled = { version = "0.34", optional = true }

# SQLite
rusqlite = { version = "0.31", features = ["bundled"] }

tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "json", "fmt", "ansi", "chrono"] }
atty = "0.2.14"
base64 = "0.22"

# Web UI API
axum = { version = "0.7", optional = true }
tower-http = { version = "0.5", features = ["fs"], optional = true }

# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# Web Search
web-search = { path = "../web" }

[features]
default = ["openai-compat", "dotenv", "api"]
openai-compat = ["dep:reqwest", "dep:futures"]
dotenv = ["dep:dotenvy"]
wasm = ["dep:wasmtime"]
sled-storage = ["dep:sled"]
api = ["dep:axum", "dep:futures", "dep:tower-http"]
